nginx/deploy/deployment.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: nginx-deployment
  labels:
    app: nginx-service
    service: nginx-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-service
      version: v1
  template:
    metadata:
      labels:
        app: nginx-service
        version: v1
    spec:
      containers:
        - name: nginx-service
          image: nginx-lehahel:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
