nginx/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx-service
    service: nginx-service
spec:
  ports:
    - port: 80
      name: "80"
  selector:
    app: nginx-service
